@@ -1,3 +1,7 @@
+2013-04-10  6.8.4-9 Bastien Roucaries  <roucaries.basti...>
+  * Respect --program-suffix configure script option (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23143).
+
 2013-04-10  6.8.4-9 Anthony Thyssen <A.Thyssen@griffith...>
   * Save the calculated angle for "deskew" as the artifact "deskew:angle"
 
